@@ -176,6 +176,10 @@ orphan_host_checks=yes
 # Default: yes
 orphan_service_checks=yes
 
+# orphan_return defines the return code for orphaned checks. Accepted return
+# codes are 0 (Ok), 1 (Warning), 2 (Critical) and 3 (Unknown) Default: 2
+orphan_return=2
+
 # When accept_clear_results is enabled, the NEB module will accept unencrypted
 # results too. This is quite useful if you have lots of passive checks and make
 # use of send_gearman/send_multi where you would have to spread the shared key to
