@@ -635,7 +635,7 @@ static int handle_host_check( int event_type, void *data ) {
         chk_result->output_file         = 0;
         chk_result->output_file_fd      = -1;
         chk_result->output              = strdup(temp_buffer);
-        chk_result->return_code         = 2;
+        chk_result->return_code         = mod_gm_opt->orphan_return;
         chk_result->check_options       = CHECK_OPTION_NONE;
         chk_result->object_check_type   = HOST_CHECK;
         chk_result->check_type          = HOST_CHECK_ACTIVE;
