@@ -3,6 +3,7 @@ This file documents the revision history for mod_gearman.
 next:
           - kill complete process group on timeout
           - close open filehandles before running check
+          - added new option 'orphan_return' to set return code of orphaned checks
 
 1.4.4 Thu May  3 15:48:34 CEST 2013
           - added 'route_eventhandler_like_checks' option
